--- a/packages/zo-ui-adapter-shadcn/package.json
+++ b/packages/zo-ui-adapter-shadcn/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "@zo-ui/core": "workspace:*",
+        "@zo-ui/types": "workspace:*",
         "sveltekit-superforms": "^2.29.1",
         "zod": "^3.25.76"
     },
