--- a/packages/zo-ui-core/package.json
+++ b/packages/zo-ui-core/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "jiti": "^2.6.1",
-    "zod-to-json-schema": "^3.25.1"
+    "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.25.1",
+    "ts-morph": "^25.0.0",
+    "@zo-ui/types": "workspace:*"
   }
 }
