--- a/package.json
+++ b/package.json
@@ -13,6 +13,19 @@
         "typescript": "^5.0.0",
         "vitest": "^1.0.0"
     },
+    "dependencies": {
+        "@zo-ui/cli": "file:./packages/zo-ui-cli",
+        "@zo-ui/core": "file:./packages/zo-ui-core",
+        "@zo-ui/adapter-shadcn": "file:./packages/zo-ui-adapter-shadcn",
+        "@zo-ui/types": "file:./packages/zo-ui-types",
+        "commander": "^11.0.0",
+        "chalk": "^5.0.0",
+        "inquirer": "^9.0.0",
+        "zod": "^3.25.76",
+        "jiti": "^2.6.1",
+        "ts-morph": "^25.0.0",
+        "zod-to-json-schema": "^3.25.1"
+    },
     "engines": {
         "node": ">=20.0.0",
         "pnpm": ">=8.0.0"
