--- a/packages/zo-ui-cli/package.json
+++ b/packages/zo-ui-cli/package.json
@@ -8,9 +8,9 @@
         "build": "tsc"
     },
     "dependencies": {
-        "@zo-ui/core": "workspace:*",
-        "@zo-ui/adapter-shadcn": "workspace:*",
-        "@zo-ui/adapter-tailwind": "workspace:*",
+        "@zo-ui/core": "file:../zo-ui-core",
+        "@zo-ui/adapter-shadcn": "file:../zo-ui-adapter-shadcn",
+        "@zo-ui/adapter-tailwind": "file:../zo-ui-adapter-tailwind",
         "commander": "^11.0.0",
         "inquirer": "^9.0.0",
         "chalk": "^5.0.0"
