--- a/packages/zo-ui-core/package.json
+++ b/packages/zo-ui-core/package.json
@@ -18,6 +18,6 @@
     "zod": "^3.25.76",
     "zod-to-json-schema": "^3.25.1",
     "ts-morph": "^25.0.0",
-    "@zo-ui/types": "workspace:*"
+    "@zo-ui/types": "file:../zo-ui-types"
   }
 }
