fix: replace workspace protocol in tailwind adapter

--- a/packages/zo-ui-adapter-tailwind/package.json
+++ b/packages/zo-ui-adapter-tailwind/package.json
@@ -7,7 +7,7 @@
         "build": "tsc"
     },
     "dependencies": {
-        "@zo-ui/core": "workspace:*"
+        "@zo-ui/core": "file:../zo-ui-core"
     },
     "devDependencies": {
         "@types/node": "^20.19.27",
